style(degree-search): fix mobile spacing in filter area

--- a/src/degree-search-utility/style.scss
+++ b/src/degree-search-utility/style.scss
@@ -49,7 +49,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 16px;
-  padding: 30px 20px 0;
+  padding: 20px 20px 0;
   z-index: 2;
 }
 
